--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,46 @@ body,
   font-size: 16px !important;
   width: 100% !important;
 }
+
+.logo-container {
+  position: relative;
+  display: inline-block;
+}
+
+.logo {
+  animation: rotate 3s linear infinite; /* Logoyu döndürme animasyonu */
+}
+
+.logo-container::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100px; /* Dalganın başlangıç boyutu */
+  height: 100px;
+  background: rgba(255, 192, 203, 0.5); /* Hafif pembe renk */
+  border-radius: 50%;
+  transform: translate(-50%, -50%);
+  animation: wave 2s infinite; /* Dalga animasyonu */
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes wave {
+  0% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(2.5);
+    opacity: 0;
+  }
+}
+
